@@ -1,0 +1,21 @@
+<assembly>
+  <id>gf-project</id>
+  <formats>
+    <format>zip</format>
+  </formats>
+  <fileSets>
+    <fileSet>
+      <directory>.</directory>
+      <outputDirectory></outputDirectory>
+      <useDefaultExcludes>true</useDefaultExcludes>
+      <excludes>
+        <exclude>**/target/**</exclude>
+        <exclude>pom.xml</exclude>
+      </excludes>
+    </fileSet>
+     <fileSet>
+      <directory>target/gf-pom-file</directory>
+      <outputDirectory></outputDirectory>
+    </fileSet>
+  </fileSets>
+</assembly>
