@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE sun-web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Application Server 9.0 Servlet 2.5//EN" "http://www.sun.com/software/appserver/dtds/sun-web-app_2_5-0.dtd">
+<sun-web-app error-url="">
+
+    <!-- added -->
+    <security-role-mapping>
+        <!-- maps "Users" group to myRole -->
+        <role-name>myRole</role-name>
+        <group-name>Users</group-name>
+    </security-role-mapping>
+    <!-- /added -->
+
+    <context-root>/httpsBasicAuth-webapp</context-root>
+    <class-loader delegate="true"/>
+    <jsp-config>
+        <property name="keepgenerated" value="true">
+            <description>Keep a copy of the generated servlet class' java code.</description>
+        </property>
+    </jsp-config>
+</sun-web-app>
